--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Image OCR Tool</title>
+    <!-- Use Tailwind CSS for easy styling -->
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -13,22 +14,30 @@
             font-family: 'Inter', sans-serif;
             background-color: #0f172a;
         }
+        /* Custom styles for drag-and-drop */
+        .drop-zone {
+            border: 2px dashed transparent;
+            transition: border-color 0.2s ease-in-out;
+        }
+        .drop-zone.drag-over {
+            border-color: #38bdf8; /* Sky 400 */
+        }
     </style>
 </head>
 <body class="bg-gray-900 text-white min-h-screen flex flex-col items-center justify-center p-4">
 
-    <div class="bg-gray-800 p-8 rounded-xl shadow-lg w-full max-w-2xl mb-8">
+    <div id="drop-zone" class="bg-gray-800 p-8 rounded-xl shadow-lg w-full max-w-2xl mb-8 drop-zone">
         <h1 class="text-3xl font-bold mb-4 text-center text-teal-400">DPS.REPORT.DLL</h1>
         <p class="text-gray-400 text-center mb-6">Extract Names and Scores From ARC DPS ScreenShot</p>
         <div class="space-y-4">
             <div>
-                <label for="imageInput" class="block text-sm font-medium text-gray-300">Choose Image Files:</label>
+                <label for="imageInput" class="block text-sm font-medium text-gray-300">Choose, Drag & Drop, or Paste Image Files:</label>
                 <input type="file" id="imageInput" accept="image/*" multiple class="mt-1 block w-full text-gray-400
-                        file:mr-4 file:py-2 file:px-4
-                        file:rounded-full file:border-0
-                        file:text-sm file:font-semibold
-                        file:bg-teal-500 file:text-white
-                        hover:file:bg-teal-600 cursor-pointer">
+                       file:mr-4 file:py-2 file:px-4
+                       file:rounded-full file:border-0
+                       file:text-sm file:font-semibold
+                       file:bg-teal-500 file:text-white
+                       hover:file:bg-teal-600 cursor-pointer">
             </div>
             <button id="processBtn" class="w-full bg-teal-500 hover:bg-teal-600 text-white font-bold py-2 px-4 rounded-md transition-colors duration-200 focus:outline-none focus:ring-2 focus:ring-teal-500">
                 Process Images
@@ -51,14 +60,14 @@
         const imageInput = document.getElementById('imageInput');
         const processBtn = document.getElementById('processBtn');
         const resultsDiv = document.getElementById('results');
+        const dropZone = document.getElementById('drop-zone');
 
         const functionUrl = 'https://owfjbkyzzbxikrkqqlli.supabase.co/functions/v1/smart-task';
 
-        processBtn.addEventListener('click', async () => {
-            const files = imageInput.files;
-
+        // A unified function to handle file processing, called from multiple event listeners
+        async function handleFiles(files) {
             if (files.length === 0) {
-                resultsDiv.textContent = "Error: Please select one or more image files.";
+                resultsDiv.textContent = "Error: Please select or drop one or more image files.";
                 resultsDiv.classList.add('text-red-400');
                 return;
             }
@@ -119,6 +128,39 @@
             } finally {
                 processBtn.disabled = false;
             }
+        }
+
+        // --- Event Listeners ---
+
+        // Listen for the "Process Images" button click
+        processBtn.addEventListener('click', () => {
+            handleFiles(imageInput.files);
+        });
+
+        // Handle drag-and-drop
+        dropZone.addEventListener('dragover', (e) => {
+            e.preventDefault();
+            dropZone.classList.add('drag-over');
+        });
+
+        dropZone.addEventListener('dragleave', () => {
+            dropZone.classList.remove('drag-over');
+        });
+
+        dropZone.addEventListener('drop', (e) => {
+            e.preventDefault();
+            dropZone.classList.remove('drag-over');
+            const files = e.dataTransfer.files;
+            handleFiles(files);
+        });
+
+        // Handle pasting images
+        window.addEventListener('paste', (e) => {
+            const files = e.clipboardData.files;
+            if (files.length > 0) {
+                e.preventDefault();
+                handleFiles(files);
+            }
         });
 
         async function processSingleImage(functionUrl, base64Image) {
@@ -172,5 +214,4 @@
         }
     </script>
 </body>
-
 </html>
