--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
     <div class="bg-gray-800 p-8 rounded-xl shadow-lg w-full max-w-2xl mb-8 drop-zone-container">
         <h1 class="text-3xl font-bold mb-4 text-center text-teal-400">DPS.REPORT.DLL</h1>
-        <p class="text-gray-400 text-center mb-6">Extract Names and Scores From ARC DPS ScreenShot</p>
+        <p class="text-gray-400 text-center mb-6">Extract Names and Scores From ARC DPS Screenshot</p>
         <div class="space-y-4">
             <div>
                 <label for="imageInput" class="block text-sm font-medium text-gray-300">Choose, Drag & Drop, or Paste Image Files:</label>
@@ -260,7 +260,7 @@
                     });
                     return detectedScores;
                 } else {
-                    throw new Error("Failed to get a valid response from the Gemini API via the Edge Function.");
+                    throw new Error("Failed to get a valid response from Edge Function.");
                 }
             } catch (e) {
                 throw new Error(`An error occurred in the image processing: ${e.message}`);
@@ -269,3 +269,4 @@
     </script>
 </body>
 </html>
+
