--- a/index.html
+++ b/index.html
@@ -10,27 +10,13 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <style>
-
-        :root {
-            --bg-color: #000000;
-            --card-bg-color: #131c2b;
-            --primary-color: #c5138a; 
-            --secondary-color: #992476;
-            --tertiary-color: #0f766e; 
-            --text-color: #ffffff; 
-            --subtle-text-color: #ff02c8; 
-            --drag-over-color: #38bdf8; 
-            --copy-btn-bg: #475569; 
-            --copy-btn-hover-bg: #334155; 
-        }
-
         body {
             font-family: 'Inter', sans-serif;
-            background-color: var(--bg-color);
+            background-color: #0f172a;
         }
         /* Style to indicate the entire body is a drop zone */
         body.drag-over {
-            border: 2px dashed var(--drag-over-color);
+            border: 2px dashed #38bdf8; /* Sky 400 */
         }
         /* Custom styles for the main container */
         .drop-zone-container {
@@ -38,39 +24,39 @@
         }
     </style>
 </head>
-<body class="min-h-screen flex flex-col items-center justify-center p-4" style="background-color: var(--bg-color); color: var(--text-color);">
+<body class="bg-gray-900 text-white min-h-screen flex flex-col items-center justify-center p-4">
 
-    <div class="p-8 rounded-xl shadow-lg w-full max-w-2xl mb-8 drop-zone-container" style="background-color: var(--card-bg-color);">
-        <h1 class="text-3xl font-bold mb-4 text-center" style="color: var(--primary-color);">DPS.REPORT.DLL</h1>
-        <p class="text-center mb-6" style="color: var(--subtle-text-color);">Extract Names and Scores From ARC DPS Screenshot</p>
+    <div class="bg-gray-800 p-8 rounded-xl shadow-lg w-full max-w-2xl mb-8 drop-zone-container">
+        <h1 class="text-3xl font-bold mb-4 text-center text-teal-400">DPS.REPORT.DLL</h1>
+        <p class="text-gray-400 text-center mb-6">Extract Names and Scores From ARC DPS ScreenShot</p>
         <div class="space-y-4">
             <div>
-                <label for="imageInput" class="block text-sm font-medium" style="color: var(--text-color);">Choose, Drag & Drop, or Paste Image Files:</label>
-                <input type="file" id="imageInput" accept="image/*" multiple class="mt-1 block w-full
+                <label for="imageInput" class="block text-sm font-medium text-gray-300">Choose, Drag & Drop, or Paste Image Files:</label>
+                <input type="file" id="imageInput" accept="image/*" multiple class="mt-1 block w-full text-gray-400
                         file:mr-4 file:py-2 file:px-4
                         file:rounded-full file:border-0
                         file:text-sm file:font-semibold
-                        file:bg-[var(--primary-color)] file:text-white
-                        hover:file:bg-[var(--tertiary-color)] cursor-pointer">
+                        file:bg-teal-500 file:text-white
+                        hover:file:bg-teal-600 cursor-pointer">
             </div>
-            <button id="processBtn" class="w-full font-bold py-2 px-4 rounded-md transition-colors duration-200 focus:outline-none focus:ring-2" style="background-color: var(--secondary-color); color: white; --tw-ring-color: var(--secondary-color);">
+            <button id="processBtn" class="w-full bg-teal-500 hover:bg-teal-600 text-white font-bold py-2 px-4 rounded-md transition-colors duration-200 focus:outline-none focus:ring-2 focus:ring-teal-500">
                 Process Images
             </button>
         </div>
     </div>
 
-    <div class="p-8 rounded-xl shadow-lg w-full max-w-2xl" style="background-color: var(--card-bg-color);">
-        <h2 class="text-2xl font-bold mb-4 text-center" style="color: var(--primary-color);">Scores Leaderboard</h2>
-        <div id="results" class="p-4 rounded-md overflow-x-auto whitespace-pre-wrap" style="background-color: #374151; color: var(--text-color);">
+    <div class="bg-gray-800 p-8 rounded-xl shadow-lg w-full max-w-2xl">
+        <h2 class="text-2xl font-bold mb-4 text-center text-teal-400">Scores Leaderboard</h2>
+        <div id="results" class="bg-gray-700 p-4 rounded-md overflow-x-auto text-gray-200 whitespace-pre-wrap">
             Results will appear here...
         </div>
-        <button id="copyBtn" class="mt-4 w-full font-bold py-2 px-4 rounded-md transition-colors duration-200 focus:outline-none focus:ring-2 hidden" style="background-color: var(--copy-btn-bg); color: white; --tw-ring-color: var(--secondary-color);">
+        <button id="copyBtn" class="mt-4 w-full bg-slate-600 hover:bg-slate-700 text-white font-bold py-2 px-4 rounded-md transition-colors duration-200 focus:outline-none focus:ring-2 focus:ring-teal-500 hidden">
             Copy to Clipboard
         </button>
     </div>
 
-    <footer class="mt-8 text-center text-sm" style="color: var(--subtle-text-color);">
-        <p>Made by Sim.1203</p>
+    <footer class="mt-8 text-center text-gray-500 text-sm">
+        <p>Made by sim</p>
     </footer>
 
     <script>
@@ -274,7 +260,7 @@
                     });
                     return detectedScores;
                 } else {
-                    throw new Error("If you seeing this contact sim");
+                    throw new Error("Failed to get a valid response from the Gemini API via the Edge Function.");
                 }
             } catch (e) {
                 throw new Error(`An error occurred in the image processing: ${e.message}`);
