--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
                     });
                     return detectedScores;
                 } else {
-                    throw new Error("Failed to get a valid response from the Gemini API via the Edge Function.");
+                    throw new Error("DEAD CONTACT SIM");
                 }
             } catch (e) {
                 throw new Error(`An error occurred in the image processing: ${e.message}`);
@@ -269,4 +269,5 @@
     </script>
 </body>
 </html>
+
 
