--- a/index.html
+++ b/index.html
@@ -263,11 +263,12 @@
                     throw new Error("DEAD CONTACT SIM");
                 }
             } catch (e) {
-                throw new Error(`An error occurred in the image processing: ${e.message}`);
+                throw new Error(`HI`);
             }
         }
     </script>
 </body>
 </html>
+
 
 
