--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
                     throw new Error("DEAD CONTACT SIM");
                 }
             } catch (e) {
-                throw new Error(`HI`);
+                throw new Error(`HI ${e.message}`);
             }
         }
     </script>
